# chariot-semantic-domains

./: CMakeLists.txt  COPYING  README.md  domsec.h
algorithms/ForwardNumerics/: AUTHORS  BaseFloating.h  BaseFloating.inch  BaseFloating.inctemplate  BaseFloating.template  BaseFloatingGeneric.h  BaseFloatingGeneric.template  BaseFloatingParameters.h  BaseHostFloating.h  BaseHostFloating.template  BaseInteger.h  BaseInteger.inch  BaseInteger.inctemplate  BaseInteger.template  BaseIntegerCommon.h  BaseIntegerGeneric.h  BaseIntegerGeneric.template
algorithms/Numerics/: Floating.h  Floating.template  HostFloating.cpp  HostFloating.h  HostFloating.template  Integer.cpp  Integer.h  Integer.template  Numerics.hpp  Numerics.template
applications/Analyzer/Scalar/: AbstractDomain.cpp  AbstractDomain.h  AbstractDomain.inch  ApproximateScalar.hpp  ConcreteOperation.cpp  ConcreteOperation.h  Scalar.hpp  Scalar.template
applications/Analyzer/Scalar/Approximate/: BitFieldMask.h  BitFieldMask.template  Conjunction.h  Disjunction.cpp  Disjunction.h  FormalOperation.cpp  FormalOperation.h  Guard.cpp  Guard.h  IntervalFloat.h  IntervalInteger.cpp  IntervalInteger.h  MethodTable.h  MethodTable.template  PrecisionLattice.cpp  PrecisionLattice.h  Top.cpp  Top.h  VirtualCall.incc  VirtualElement.cpp  VirtualElement.h  VirtualElement.template
applications/Analyzer/Scalar/Constant/: ConstantElement.cpp  ConstantElement.h
applications/Analyzer/Scalar/Exact/: ExactElement.cpp  ExactElement.h
applications/Analyzer/Scalar/Implementation/: GeneralImplementation.hpp  GeneralImplementation.template  ImplementationElement.h  NativeImplementation.hpp
applications/Analyzer/Scalar/Parser/: IOScalar.cpp  IOScalar.h  ScalarLexer.cpp  ScalarLexer.h  ScalarParser.cpp  ScalarParser.h  ScalarToken.cpp  ScalarToken.h
applications/Analyzer/Virtual/: VirtualAnalyzer.hpp
libalgorithms/: CMakeLists.txt
libapplications/: CMakeLists.txt
libutils/: CMakeLists.txt
tests/: TestDomain.cpp  TestDomain.h  file_general.txt
tests/TestDomain/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
utils/Collection/: Collection.hpp  Collection.template  ELMCollection.h  ELMCollection.incc  ELMCollection.incfoot  ELMCollection.inch  ELMCollection.incheader  ELMCollection.template  ELMMapCollection.inch  ELMTreeCollection.inch  README.md
utils/Collection/ConcreteCollection/: Array.cpp  Array.h  Array.incc  Array.inch  Array.inline  BasicList.cpp  BasicList.h  BasicSortedAVL.cpp  BasicSortedAVL.h  BasicSortedAVL.incc  BasicSortedAVL.inch  List.cpp  List.h  List.inline  MultiArray.cpp  MultiArray.h  MultiMap.h  MultiMap.template  MultiSorted.h  MultiSorted.template  SortedAVL.cpp  SortedAVL.h  SortedAVL.incc  SortedAVL.inch  SortedAVL.inctemplate  SortedAVL.template  SortedArray.cpp  SortedArray.h  Special.cpp  Special.h  Tree.cpp  Tree.h  TreeCommon.h  TreeCommon.template  TreeCommonFlatAccess.inch  TreeParent.h
utils/Collection/Implementation/: BinaryParent.cpp  BinaryParent.h  ImplCommonTree.h  ImplCommonTree.template  ImplTree.cpp  ImplTree.h  ImplTreeParent.h  ImplTreeParent.template  TreeCursorField.inline
utils/Collection/VirtualCollection/: AbstractCollection.h  AbstractCollection.macro  ExtendedParameters.h  VirtualCollection.cpp  VirtualCollection.h  VirtualCollection.incc  VirtualCollection.inline  VirtualCollection.template  VirtualMapCollection.h  VirtualMapCollection.template  VirtualMultiSortedCollection.h  VirtualSortedCollection.h  VirtualTree.cpp  VirtualTree.h  VirtualTree.template
utils/Pointer/: AutoPointer.h  AutoPointer.template  Binary.cpp  Binary.h  Binary.incc  Binary.inch  Binary.template  BinaryBalance.incc  DescentParse.h  ExtPointer.hpp  ExtPointer.template  ImplArray.cpp  ImplArray.h  ImplArray.template  ImplList.cpp  ImplList.h  ImplList.template  LinearCollection.hpp  LinearCollection.template  MngPointer.cpp  MngPointer.h  PassPointer.h  Pointer.cpp  Pointer.h  Pointer.hpp  Pointer.template  README.md  SharedCollection.cpp  SharedCollection.h  SharedPointer.cpp  SharedPointer.h  TreeMethods.h  Vector.h  Vector.template
utils/StandardClasses/: DefineNew.h  IOStreamMethods.incc  IOStreamMethods.inch  Persistence.cpp  Persistence.h  README.md  StandardClasses.cpp  StandardClasses.hpp  StandardClasses.macro  StandardMessage.h  UndefineNew.h
utils/TString/: IOSubStringMethods.incc  IOSubStringMethods.inch  README.md  SString.cpp  SString.h  SString.template  SetOfChars.cpp  SetOfChars.h  SetOfChars.template  String.hpp  String.template  StringRep.cpp  StringRep.h  StringRep.template  SubString.cpp  SubString.h  SubString.template  TernaryTree.cpp  TernaryTree.h  TernaryTree.template  TernaryTreeBase.h  TernaryTreeBase.template  TernaryTreeInterface.cpp  TernaryTreeInterface.h  TernaryTreeInterface.template  TernaryTreeInterfaceBase.cpp  TernaryTreeInterfaceBase.h  TernaryTreeInterfaceBase.template  TernaryTreeParent.cpp  TernaryTreeParent.h  TernaryTreeParent.template  TernaryTreeParentInterface.cpp  TernaryTreeParentInterface.h  TernaryTreeParentInterface.template
(+67 files in other folders)
